@@ -5,4 +5,3 @@ use-ipython-icon-in-desktop-files.patch
 use-system-mathjax-if-available.patch
 parallel-2to3.patch
 shared-static-path.patch
-except-shadows-builtin-fix.patch
